fix: shop-header font size on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -628,8 +628,8 @@ input[type=number] {
 /* media query */
 
 @media screen and (max-width: 480px) {
-    .shop-header-text {
-        font-size: 130px;
+    #shop-header {
+        font-size: 65px;
     }
 
     .zigzag-line {
